Feat: local verify email
