# app/controllers/api/v1/ticketController.js
@@ -2,6 +2,8 @@ const ticketService = require("../../../services/ticketService")
 
 module.exports = {
     async create(req, res) {
+        const stringFlight = req.body.flight.toUpperCase()
+        const stringYear = new Date(req.body.takeOff).getFullYear().toString().slice(-2)
         const takeDate = new Date(req.body.takeOff).getDate()
         const arriveDate = new Date(req.body.arrive).getDate()
         const countUser = await ticketService.counting()
@@ -9,10 +11,11 @@ module.exports = {
         const getTakeDates = takeDate.toString().length == 2 ? takeDate.toString() : "0" + takeDate.toString()
         const getArriveDates = arriveDate.toString().length == 2 ? arriveDate.toString() : "0" + arriveDate.toString()
         
-        const customCode = "TI" + getCount + "T" + getTakeDates + "A" + getArriveDates
+        const customCode = stringFlight.slice(0,2)+ stringYear + "TO" + getTakeDates + "AR" + getArriveDates + getCount
 
         const body = {
             ...req.body,
+            flight: stringFlight,
             code: customCode
         }
 
@@ -83,6 +86,38 @@ module.exports = {
             })
             .catch((err) => {
                 res.status(401).json({
+                    status: "FAIL",
+                    errors: err.message
+                })
+            })
+    },
+
+    listDoms(req, res) {
+        ticketService.ticketDom()
+            .then((tickets) => {
+                res.status(200).json({
+                    status: "OK",
+                    data: { tickets }
+                })
+            })
+            .catch((err) => {
+                res.status(422).json({
+                    status: "FAIL",
+                    errors: err.message
+                })
+            })
+    },
+
+    listIntr(req, res) {
+        ticketService.ticketIntr()
+            .then((tickets) => {
+                res.status(200).json({
+                    status: "OK",
+                    data: { tickets }
+                })
+            })
+            .catch((err) => {
+                res.status(422).json({
                     status: "FAIL",
                     errors: err.message
                 })
